<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.TheMovies.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/img_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_background"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@color/black"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_collapseMode="pin"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.TheMovies.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_color"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="#FF5722"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_detailPoster"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/image_poster" />

        <TextView
            android:id="@+id/tv_releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/release_date"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/img_detailPoster"
            app:layout_constraintTop_toTopOf="@+id/img_detailPoster" />

        <TextView
            android:id="@+id/tv_releaseDateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/release_date"
            app:layout_constraintStart_toStartOf="@+id/tv_releaseDate"
            app:layout_constraintTop_toBottomOf="@+id/tv_releaseDate" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/language"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_releaseDateValue"
            app:layout_constraintTop_toBottomOf="@+id/tv_releaseDateValue" />

        <TextView
            android:id="@+id/tv_languageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/language_value"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_language"
            app:layout_constraintTop_toBottomOf="@+id/tv_language" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/overview"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/img_detailPoster"
            app:layout_constraintTop_toBottomOf="@+id/tv_languageValue" />

        <TextView
            android:id="@+id/tv_overviewValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/overview_value"
            app:layout_constraintStart_toStartOf="@+id/tv_overview"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

        <TextView
            android:id="@+id/tv_voteAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/vote_average"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_overviewValue"
            app:layout_constraintTop_toBottomOf="@+id/tv_overviewValue" />

        <TextView
            android:id="@+id/tv_voteAverageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/vote_average_value"
            app:layout_constraintStart_toStartOf="@+id/tv_voteAverage"
            app:layout_constraintTop_toBottomOf="@+id/tv_voteAverage" />

        <TextView
            android:id="@+id/tv_voteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/vote_count"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_voteAverageValue"
            app:layout_constraintTop_toBottomOf="@+id/tv_voteAverageValue" />

        <TextView
            android:id="@+id/tv_voteCountValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/vote_count_value"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_voteCount"
            app:layout_constraintTop_toBottomOf="@+id/tv_voteCount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_baseline_favorite_24"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>