<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/title_tvShow" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/title_favorite" />

</menu>